adding files fixing errors

--- a/42_curcus/libft/Makefile
+++ b/42_curcus/libft/Makefile
@@ -1,2 +1,51 @@
+# **************************************************************************** #
+#                                                                              #
+#                                                         :::      ::::::::    #
+#    Makefile                                           :+:      :+:    :+:    #
+#                                                     +:+ +:+         +:+      #
+#    By: oharoon <oharoon@student.42.fr>            +#+  +:+       +#+         #
+#                                                 +#+#+#+#+#+   +#+            #
+#    Created: 2022/10/29 14:58:19 by oharoon           #+#    #+#              #
+#    Updated: 2022/10/29 16:37:22 by oharoon          ###   ########.fr        #
+#                                                                              #
+# **************************************************************************** #
+
+
+CC		= gcc
+CFLAGS	= -Wall -Wextra -Werror
+RM		= /bin/rm -f
+
+
+
 NAME = libft.a
+
 INCLUDE = libft.h
+
+SRCS = ft_isascii.c ft_isprint.c ft_isalpha.c ft_isdigit.c ft_isalnum.c \
+			ft_tolower.c ft_toupper.c ft_strlen.c ft_strlcpy.c ft_strlcat.c \
+			ft_strchr.c ft_strrchr.c ft_strnstr.c ft_strncmp.c ft_atoi.c \
+			ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c \
+			ft_memchr.c ft_memcmp.c ft_strdup.c ft_calloc.c ft_itoa.c \
+			ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
+			ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_strmapi.c
+
+OBJS	= $(SRCS:.c=.o)
+
+all: $(NAME)
+
+$(NAME):	$(OBJS)
+			ar -rcs $(NAME) $(OBJS)
+
+clean:
+	$(RM) $(OBJS)
+
+fclean: clean
+	$(RM) $(NAME)
+
+re: clean
+	rm -rf $(NAME)
+	make all
+	make clean
+	
+
+.PHONY: all clean fclean re 
