--- a/42_curcus/libft/Makefile
+++ b/42_curcus/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: oharoon <oharoon@student.42.fr>            +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2022/10/29 14:58:19 by oharoon           #+#    #+#              #
-#    Updated: 2022/11/01 13:15:56 by oharoon          ###   ########.fr        #
+#    Updated: 2022/11/10 19:41:29 by oharoon          ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -27,9 +27,14 @@ SRCS = ft_isascii.c ft_isprint.c ft_isalpha.c ft_isdigit.c ft_isalnum.c \
 			ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c \
 			ft_memchr.c ft_memcmp.c ft_strdup.c ft_calloc.c ft_itoa.c \
 			ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c \
-			ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_strmapi.c
+			ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_strmapi.c \
+			ft_striteri.c 
 
 OBJS	= $(SRCS:.c=.o)
+
+BONUS			=	ft_lstnew.c
+
+BONUS_OBJS		= $(BONUS:.c=.o)
 
 all: $(NAME)
 
@@ -51,6 +56,9 @@ re: clean
 	rm -rf $(NAME)
 	make all
 	make clean
+
+bonus:			$(OBJS) $(BONUS_OBJS)
+				ar -rcs $(NAME) $(OBJS) $(BONUS_OBJS)
 	
 
-.PHONY: all clean fclean re 
+.PHONY: all clean fclean re bonus
